# APILens

./: .coverage  .env  .env.example  .gitignore  .pypirc  README.md  log_server.py  openai_connectivity_test.py  pyproject.toml  requirements.txt  setup.py  test_anthropic.py  test_db_connection.py  test_log_server.py  test_openai_wrapper.py  test_sdk.py  test_wrappers.py
apilens/: anthropic_wrapper.py  base_wrapper.py  config.py  gemini_wrapper.py  logger.py  openai_wrapper.py  rest_logger.py
apilens/api/: routes.py
apilens/tests/: test_gemini_wrapper.py  test_logger.py  test_wrapper.py
docs/: new_features.md
results/: test_results.csv
src/apilens/: __init__.py  anthropic_wrapper.py  base_wrapper.py  db.py  gemini_wrapper.py  openai_wrapper.py  rest_logger.py
testenv/: pyvenv.cfg
tests/: conftest.py
