[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "apilens_test1"
version = "0.1.8"
description = "A unified wrapper for OpenAI, Anthropic, and Google Gemini APIs with logging capabilities"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "apilens", from = "src"}]
license = "MIT"
repository = "https://github.com/yourusername/apilens"
keywords = ["openai", "api", "tracking", "monitoring", "cost"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = "^3.9"
psycopg2-binary = "^2.9.9"
requests = "^2.31.0"
google-generativeai = ">=0.3.0"
anthropic = ">=0.5.0"
python-dotenv = ">=1.0.0"
aiohttp = ">=3.7.0,<4.0.0"
pytz = ">=2024.1"
fastapi = { version = ">=0.100.0", optional = true }
uvicorn = { version = ">=0.15.0", optional = true }
pydantic = { version = ">=2.0.0", optional = true }
openai = ">=1.0.0"

[tool.poetry.extras]
server = ["fastapi", "uvicorn", "pydantic"]

[tool.poetry.dev-dependencies]
pytest = ">=7.0.0"
